--- a/wtbui/package.json
+++ b/wtbui/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "core-js": "^3.8.3",
     "vue": "^3.2.13",
+    "vue-material": "1.0.0-beta-15",
     "vue-router": "^4.0.3",
     "vuex": "^4.0.0"
   },
