--- a/wtbs/src/main/resources/application.properties
+++ b/wtbs/src/main/resources/application.properties
@@ -1,1 +1,10 @@
+server.port=8080
+server.servlet.context-path=/api/v1
 
+spring.datasource.url=jdbc:postgresql://localhost:5432/wtbdb
+spring.datasource.username=zrik
+spring.datasource.password=123456
+spring.jpa.hibernate.ddl-auto=none
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQL81Dialect
+#to show sql
+spring.jpa.open-in-view=true
