--- a/wtbui/package.json
+++ b/wtbui/package.json
@@ -8,11 +8,16 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "axios": "^1.3.3",
     "core-js": "^3.8.3",
+    "moment": "^2.29.4",
+    "oh-vue-icons": "1.0.0-rc3",
+    "pinia": "^2.0.33",
     "vue": "^3.2.13",
+    "vue-flatpickr-component": "^11.0.2",
     "vue-material": "1.0.0-beta-15",
     "vue-router": "^4.0.3",
-    "vuex": "^4.0.0"
+    "vuejs-logger": "^1.5.5"
   },
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "^5.4.0",
@@ -32,5 +37,10 @@
     "sass": "^1.32.7",
     "sass-loader": "^12.0.0",
     "typescript": "~4.5.5"
+  },
+  "browser": {
+    "fs": false,
+    "path": false,
+    "os": false
   }
 }
