--- a/wtbs/src/main/resources/application.properties
+++ b/wtbs/src/main/resources/application.properties
@@ -4,7 +4,8 @@ server.servlet.context-path=/api/v1
 spring.datasource.url=jdbc:postgresql://localhost:5432/wtbdb
 spring.datasource.username=zrik
 spring.datasource.password=123456
-spring.jpa.hibernate.ddl-auto=none
+spring.jpa.generate-ddl=true
+spring.jpa.hibernate.ddl-auto=create
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQL81Dialect
 #to show sql
 spring.jpa.open-in-view=true
